tests/baselines/reference/assignmentCompatFunctionsWithOptionalArgs.errors.txt
tests/cases/compiler/assignmentCompatFunctionsWithOptionalArgs.ts(1,10): error TS2391: Function implementation is missing or not immediately following the declaration.
tests/cases/compiler/assignmentCompatFunctionsWithOptionalArgs.ts(4,5): error TS2345: Argument of type '{ id: 数字; name: 真假; }' is not assignable to parameter of type '{ id: 数字; name?: 文字; }'.
  Types of property 'name' are incompatible.
    Type '真假' is not assignable to type '文字'.
tests/cases/compiler/assignmentCompatFunctionsWithOptionalArgs.ts(5,5): error TS2345: Argument of type '{ name: 文字; }' is not assignable to parameter of type '{ id: 数字; name?: 文字; }'.
  Property 'id' is missing in type '{ name: 文字; }'.


==== tests/cases/compiler/assignmentCompatFunctionsWithOptionalArgs.ts (3 errors) ====
    function foo(x: { id: number; name?: string; }): void;
             ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
    foo({ id: 1234 });                 // Ok
    foo({ id: 1234, name: "hello" });  // Ok
    foo({ id: 1234, name: false });    // Error, name of wrong type
        ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ id: 数字; name: 真假; }' is not assignable to parameter of type '{ id: 数字; name?: 文字; }'.
!!! error TS2345:   Types of property 'name' are incompatible.
!!! error TS2345:     Type '真假' is not assignable to type '文字'.
    foo({ name: "hello" });            // Error, id required but missing
        ~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ name: 文字; }' is not assignable to parameter of type '{ id: 数字; name?: 文字; }'.
!!! error TS2345:   Property 'id' is missing in type '{ name: 文字; }'.